# jobs

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  补充讲解.ppt
.claude/: settings.local.json
old_py/: build_site_data.py  make_csv.py  make_prompt.py  parse_detail.py  parse_occupations.py  process.py  score.py  scrape.py
site/: data.json  index.html  index_zh.html
src/: occupations.csv
src/jobs/: __init__.py  bls.py  cli.py  config.py  html_parser.py  io.py  llm_scorer.py  occupation.py  progress.py  runner.py  soup.py  validator.py  web.py
tests/: test_models.py  test_parser.py  test_progress.py  test_scorer.py  test_utils.py  test_validator.py
